testdata/typechecker/error/portfolio_UndefFuncParam.java
// Tests that function parameters of undefined type error.
// Because methods use the same code path, this test covers them too.

int main() {
    return 0;
}

int f(UndefClass a) {
    return 0;
}
